<resources>
    <string name="app_name">CookbookApp</string>
    <string name="title">Cookbook</string>
    <string name="intro_img_desc">Intro Image</string>
    <string name="registration">REGISTER</string>
    <string name="login">Sign In</string>
    <string name="lookup_one">SEARCH BY CATEGORY</string>
    <string name="lookup_two">SEARCH BY TITLE</string>
    <string name="search_filter_category">Search by Category</string>
    <string name="search_filter_cuisine">Search by Cuisine</string>
    <string name="category_items">Category Items:</string>
    <string name="cuisine_items">Cuisine Items:</string>
    <string name="search_two">SEARCH</string>
    <string name="recipe_title">Title</string>
    <string name="recipe_author">User</string>
    <string name="cardview_image_recipe">Recipe Image</string>
    <string name="recipe_preptime">Prep Time</string>
    <string name="recipe_details">Instructions and Ingredients</string>
    <string name="search_filter_start">Starts With</string>
    <string name="search_filter_exact">Exact Title</string>
    <string name="search_filter_contains">Contains</string>
    <string name="edit_text_search_hint">Your search term</string>
    <string name="Email">Email:</string>
    <string name="register_email">Enter your email</string>
    <string name="Username">Username:</string>
    <string name="register_username">Enter a username</string>
    <string name="login_username">Enter your username</string>
    <string name="Password">Password</string>
    <string name="register_password">Enter a password</string>
    <string name="login_password">Enter your password</string>
    <string name="RePassword">Re - Password</string>
    <string name="register_re">Retype password</string>
    <string name="enter_verification_code">Enter your verification code:</string>
    <string name="confirm_registration">CONFIRM</string>
    <string name="verification_info">A verification code will be sent to: </string>
    <string name="my_recipes">MY RECIPES</string>
    <string name="log_off">Log Off</string>
    <string name="insert_recipes">INSERT RECIPES</string>
    <string name="edit_recipes">EDIT RECIPES</string>
    <string name="insert_title">Insert a title</string>
    <string name="insert_prep">Insert prep time</string>
    <string name="cuisine">Cuisine</string>
    <string name="category">Dish Category</string>
    <string name="image">Image: (none)</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="insert_cuisine">Insert cuisine</string>
    <string name="insert_category">Insert dish category</string>
    <string name="instructions">Instructions</string>
    <string name="enter_instructions">Enter the instructions</string>
    <string name="insert">INSERT</string>
    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="ingredient">Ingredient</string>
    <string name="insert_ingredient">Insert an ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="insert_quantity">Insert the quantity</string>
    <string name="consistency">Consistency</string>
    <string name="insert_consistency">Insert the consistency</string>
    <string name="add_to_list">Add to list</string>
    <string name="view_list">View List</string>
    <string name="hide_list">Hide List</string>
    <string name="list_of_ingredients">LIST OF MEASUREMENTS:</string>
    <string name="clear_all_ingredients">Clear All Measurements</string>
    <string name="clear_last_ingredient">Clear Last Measurement</string>
    <string name="remove_image">REMOVE IMAGE</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="reset_instructions">RESET INSTRUCTIONS</string>
    <string name="delete">DELETE</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_title">Are you sure you want to delete this recipe?</string>
    <string name="update">UPDATE</string>
    <string name="insert_dialog_title">Are you sure you want to insert this recipe?</string>
    <string name="registration_dialog_title">Are you sure you want to register a new account?</string>
    <string name="verification_dialog_title">Are you sure you inserted the correct code?</string>
    <string name="measurements">Measurements</string>
    <string name="open_form">OPEN FORM</string>
    <string name="close_form">CLOSE FORM</string>
    <string name="none">None</string>
    <string name="keep_current">Keep current</string>
    <string name="update_current_item_error_msg">If the current item is not kept, a new one must be inserted</string>
    <string name="empty_field_error_msg">Empty field not allowed</string>
    <string name="measurements_min_size_error_msg">At least one measurement is required</string>
    <string name="exceeded_img_size_error_msg">Size of image exceeded max size of 1.5 MB</string>
    <string name="insert_recipe_logged_in_error_msg">Must be logged in to insert a recipe</string>
    <string name="update_recipe_logged_in_error_msg">Must be logged in to update a recipe</string>
    <string name="ms_adapter_error_msg">An error occurred with the measurements adapter</string>
    <string name="update_recipe_dialog_title">Are you sure you want to update this recipe?</string>
</resources>
