<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insert_recipes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".InsertRecipesActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_insert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_text_insert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_title"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_prep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_preptime"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_text_insert_prep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_prep"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuisine"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_insert_cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_cuisine"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_insert_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_category"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_choose_image"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Button
                    android:id="@+id/btn_remove_image"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

            <TextView
                android:id="@+id/texti_view_insert_instr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_ml_instr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_instructions"
                android:inputType="textMultiLine"
                android:maxLength="800" />

            <TextView
                android:id="@+id/text_view_insert_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredient"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_insert_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_ingredient"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_insert_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_quantity"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" />

            <TextView
                android:id="@+id/text_view_insert_consistency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consistency"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_insert_consistency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_consistency"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_to_list"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_list"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Button
                    android:id="@+id/btn_view_hide_list"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_list"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_label_list_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_of_ingredients"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_list_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:text=""
                        android:textColor="#2E2D2D"
                        android:textSize="14sp" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/btn_confirm_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/insert" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>