<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_card_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_card_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_card_consistency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consistency"
            android:textColor="@android:color/black" />

    </LinearLayout>
</androidx.cardview.widget.CardView>