<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cardview_image_recipe"
            android:src="@drawable/notfound" />

        <TextView
            android:id="@+id/text_view_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_recipe_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_author" />

        <TextView
            android:id="@+id/text_view_recipe_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>