<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lookup_two_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".SecondLookupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.21" />

    <RadioGroup
        android:id="@+id/radiogroup_title_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/line_mid_one"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toTopOf="@+id/line_top">

        <RadioButton
            android:id="@+id/radio_btn_startsWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_start" />

        <RadioButton
            android:id="@+id/radio_btn_exact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_filter_exact" />

        <RadioButton
            android:id="@+id/radio_btn_contains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_contains" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.39" />

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_search_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/line_mid_three"
        app:layout_constraintEnd_toStartOf="@+id/btn_title_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_mid_two" />

    <Button
        android:id="@+id/btn_title_search"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/line_mid_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_text_search"
        app:layout_constraintTop_toTopOf="@+id/line_mid_two" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.45" />

    <ProgressBar
        android:id="@+id/progressBar_three"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line_mid_five"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toTopOf="@+id/line_mid_four" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_mid_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/line_bottom"
        app:layout_constraintEnd_toStartOf="@+id/line_right"
        app:layout_constraintStart_toStartOf="@+id/line_left"
        app:layout_constraintTop_toTopOf="@+id/line_mid_six" />
</androidx.constraintlayout.widget.ConstraintLayout>